--- a/css/global.css
+++ b/css/global.css
@@ -19,7 +19,6 @@ header{
     display: flex;
     justify-content: center;
     margin-bottom: 4rem;
-
 }
 h2{
     color: var(--card-color-primary);
@@ -29,9 +28,6 @@ h2{
     gap: 1rem;
     border-radius: 6px;
     margin-bottom: 3.25rem;
-
-
-
 }
 span{
     color: white;
@@ -42,8 +38,9 @@ main{
     
     width: fit-content;
     margin-inline: auto;
-
-
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
 ul{
     list-style: none;
