--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,19 @@
 .card{
     background-color: var(--card-bg-color);
     width: 19.75rem;
-   padding: 2rem 1.5rem;
+    padding: 2rem 1.5rem;
     display: flex;
     flex-direction: column;
     align-self: center;
     border-radius: 26px;
-    border-bottom: 1px solid var(--card-bg-color);
+    border-bottom: 1px solid var(--card-color-primary);
     
+}ard ul{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
 }
+
 .card img{
     width: 3.215rem;
 
@@ -23,4 +28,10 @@
     font-size: 2.25rem;
     color: var(--game-hour-color);
 
+}
+.card ul li + li{
+    padding-top: 1.5rem;
+    border-top: 1px solid var(--li-border-color);
+
+    
 }
