--- a/css/main.css
+++ b/css/main.css
@@ -35,3 +35,13 @@
 
     
 }
+.card h2:hover,
+.card ul li img:hover,
+.card ul li strong:hover{
+    transform: scale(2.2);
+}
+.card h2,
+.card ul li img,
+.card ul li strong{
+    transition: transform .3s;
+}
